--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "typescript": "^5.4.5"
   },
   "dependencies": {
+    "dotenv": "^16.4.5",
+    "env-var": "^7.4.2",
     "express": "^4.19.2"
   }
 }
