--- a/package.json
+++ b/package.json
@@ -5,13 +5,14 @@
   "main": "index.js",
   "scripts": {
     "dev": "tsnd --respawn --clear src/app.ts",
-    "build": "rimraf ./dist && tsc",
+    "build": "rimraf ./dist && tsc && npm run prisma:migrate:prod",
     "start": "node dist/app.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/compression": "^1.7.5",
     "@types/express": "^4.17.21",
     "@types/node": "^20.12.12",
     "prisma": "^5.14.0",
@@ -21,6 +22,7 @@
   },
   "dependencies": {
     "@prisma/client": "^5.14.0",
+    "compression": "^1.7.4",
     "dotenv": "^16.4.5",
     "env-var": "^7.4.2",
     "express": "^4.19.2"
